working with view: ngShow, ngClass etc

--- a/client/content/styles/styles.css
+++ b/client/content/styles/styles.css
@@ -33,3 +33,15 @@ a {
 .site-footer {
   background: orange;
 }
+
+.bad {
+  color: #d50000;
+  font-weight: bold;
+}
+
+.normal {
+}
+
+.good {
+  color: #1b5e20;
+}
