fix: ng-click (diet.html), added filter, added css

--- a/client/app/layout/header.html
+++ b/client/app/layout/header.html
@@ -1,4 +1,4 @@
-<div class="toolbar">
+<div class="toolbar bgc-blue-500 tc-white-1" style="width: 100%" >
 	<span class="toolbar__label fs-title">Lorem Ipsum</span>
 	<div class="toolbar__right">
 		<ul>
